--- a/dss/templates/decisiones/baterias.html
+++ b/dss/templates/decisiones/baterias.html
@@ -16,4 +16,10 @@
     <img height="200" src="{% static 'gif.gif' %}"/>
     <p>Work in progress</p>
   </div>
+
+  <script>
+    
+      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+      const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+  </script>
 {% endblock %}
