--- a/dss/templates/decisiones/orientacion_placas.html
+++ b/dss/templates/decisiones/orientacion_placas.html
@@ -47,7 +47,7 @@
                           <td>Total consumido:</td>
                           <td data-bs-toggle="tooltip" data-bs-title="Total de kWh consumidos">{{ item.totales.total|floatformat:'1' }} kWh</td>
                           <td></td>
-                          <td data-bs-toggle="tooltip" data-bs-title="Precio factura">{{ item.precios.0|floatformat:'1' }}€</td>
+                          <td data-bs-toggle="tooltip" data-bs-title="Precio sin ahorro ni compensacion por excedente">{{ item.precios.0|floatformat:'1' }}€</td>
                         </tr>
                         <tr>
                           <th data-bs-toggle="tooltip" data-bs-title="Orientación actual y modificada">Orientación</th>
